--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.10",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.3",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "mapbox.js": "^3.1.1"
   }
 }
